# VoiceAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
docs/: WRITEUP.md
scripts/: seed_db.py
src/voiceai/: __init__.py  bot.py  main.py  settings.py
src/voiceai/booking/: __init__.py  db.py  models.py  repository.py
src/voiceai/pipeline/: __init__.py  idle.py  observers.py  prompts.py  services.py
src/voiceai/tools/: __init__.py  handlers.py  schemas.py
src/voiceai/web/: app.js  index.html
tests/: test_repository.py  test_tools.py
